[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crash-test"
version = "0.0.1"
# TODO: creare email per queste cose
authors = [
    { name = "utox39", email = "email@email.com" },
]
description = "A command-line tool to create a multipass instance and transfer a project you want to test"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    # TODO: testare su windows, se positivo lasciare così altrimenti usare Unix
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/utox39/crashtest"
"Bug Tracker" = "https://github.com/utox39/crashtest/issues"