[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crash-test"
version = "0.0.1"
authors = [
    { name = "utox39", email = " francescomoccaldi39@gmail.com" },
]
description = "A command-line tool to create a Multipass instance and transfer a project to test to the newly created instance"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/utox39/crashtest"
"Bug Tracker" = "https://github.com/utox39/crashtest/issues"